--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -272,7 +272,7 @@
 			<p>{% trans 'Стоимость' context "storage_upgrade" %}: 500 {% trans 'Сталь' context "goods" %}, 500 {% trans 'Алюминий' context "goods" %}</p>
 
 			{% if limit_upgrade %}
-			<h2 class="store__modal1-title" style="color: var(--c10two);">{% trans 'Максимальный уровень' context "storage_upgrade" %}</h2>
+			<h2 class="store__modal1-title" style="color: var(--c10two);">{% trans 'Требуется' context "storage_upgrade" %} {% trans 'Интеллект' %}: {{ limit_upgrade }}</h2>
 
 			{% else %}
 
@@ -422,30 +422,6 @@
 			closeModalBtn: document.getElementById('store__modal2-close'),
 		})
 	}
-
-	{% if can_upgrade %}
-
-	large_upgrade_counter = 0;
-	medium_upgrade_counter = 0;
-	small_upgrade_counter = 0;
-
-	large_counter_limit = {{ large_limit }};
-	medium_counter_limit = {{ medium_limit }};
-	small_counter_limit = {{ small_limit }};
-
-	var upgrade_dict = {
-        {% for good in storage|get_attr:'sizes'|dict_key:'large' %}
-            {{ good }}: 0,
-        {% endfor %}
-		{% for good in storage|get_attr:'sizes'|dict_key:'medium' %}
-            {{ good }}: 0,
-        {% endfor %}
-		{% for good in storage|get_attr:'sizes'|dict_key:'small' %}
-            {{ good }}: 0,
-        {% endfor %}
-    };
-
-	{% endif %}
 </script>
 
 {% if not player.educated %}
