--- a/player/templates/player/redesign/overview_skills.html
+++ b/player/templates/player/redesign/overview_skills.html
@@ -45,25 +45,42 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('power')" {% else %} disabled {% endif %} style="cursor: pointer">
-    {% if train %}
-        {% if premium %}
-            {% if has_slot %}
-                {% trans 'в очередь' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
+
+    <div style="display: flex; justify-content: center; margin-bottom: 20rem;">
+
+      <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('power')" style="cursor: pointer" {% else %} disabled style="opacity: 0" {% endif %}>
+        {% if train %}
+            {% if premium %}
+                {% if has_slot %}
+                    {% trans 'в очередь' context "skills" %}
+                {% endif %}
             {% endif %}
+
         {% else %}
-            {% if train.skill == 'power' %}
-                {% trans 'изучается...' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
-            {% endif %}
+            {% trans 'изучить' context "skills" %}
+
         {% endif %}
-    {% else %}
-    {% trans 'изучить' context "skills" %}
-    {% endif %}
-  </button>
+      </button>
+
+      {% if train and train.skill == 'power' %}
+      <button class="overview__love-stat-learn" onclick="boost_skill('power')" style="cursor: pointer;">
+        <svg fill="var(--c60)" width="20rem" height="20rem" viewBox="0 0 32 32" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" style="margin-top: 2rem;">
+          <defs id="defs1"></defs>
+          <title id="title1">pill</title>
+          <path
+             id="rect3"
+             style="fill:var(--c10one);stroke-width:0.0472029;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke"
+             transform="matrix(0.48278352,0.87573972,-0.85573384,0.51741628,0,0)"
+             d="m 15.984882,-16.060812 c 0.269886,-0.301886 0.847524,-1.237818 1.575799,-1.76264 0.728274,-0.524822 1.828514,-1.01696 2.764942,-1.189766 0.936428,-0.172807 1.827217,-0.181644 2.698855,0.122023 0.871639,0.303668 1.984671,1.448204 2.299281,1.677773 0.136928,0.09992 0.900915,1.076134 1.109964,2.353539 0.271269,1.657604 -0.02245,3.716638 -0.02245,3.93563 0,0.387755 0,7.4115234 0,7.4115234 0,0.7755089 -0.638907,1.3998355 -1.432527,1.3998355 l -8.179049,0 c -0.79362,0 -1.432527,-0.6243266 -1.432527,-1.3998355 l 0,-7.4115234 c 0,-0.439676 -0.01817,-2.069408 0.127843,-3.336918 0.111529,-0.96815 0.372991,-1.668909 0.489865,-1.799641 z" />
+          <g id="g2" transform="translate(0.07984301,0.76198896)">
+            <path d="m 26.942774,7.5835036 c -1.618,-2.803 -5.215,-3.779 -8.01,-2.146 -9.2730001,5.4170004 -6.35,3.666 -15.8220001,9.1350004 v 0 c -2.80299994,1.618 -3.76399994,5.207 -2.14599995,8.01 1.61799995,2.803 5.21399995,3.777 8.00999995,2.146 9.4470001,-5.512 6.5180001,-3.772 15.8220001,-9.135 2.804,-1.616 3.765,-5.207 2.146,-8.0100004 z m -2.443,7.2430004 -7.751,4.475 c 0.424,-0.245 0.7375,-0.856 0.796,-1.089 0.0585,-0.233 0.1355,-0.9675 -0.073,-1.818 -0.2085,-0.8505 -2.2915,-4.307 -2.945,-4.926 -0.6535,-0.619 -1.17,-0.894 -1.437,-1.009 -0.267,-0.115 -1.037,-0.262 -1.455,-0.017 l 7.751,-4.4750004 c 5.215,-3.011 10.413,5.8000004 5.115,8.8590004 z" id="path1"></path>
+            <rect style="opacity:1;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect1" width="1.5253338" height="8.6951571" x="26.551046" y="17.135778" rx="0.89540023" ry="1.0104811"></rect>
+            <rect style="opacity:1;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect2" width="1.5253338" height="8.6951571" x="20.72069" y="-31.661291" rx="0.89540023" ry="1.0104811" transform="rotate(90)"></rect>
+          </g>
+        </svg>
+      </button>
+      {% endif %}
+    </div>
 </div>
 <!--интеллект-->
 <div class="overview__love-stat-content">
@@ -94,25 +111,38 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('knowledge')" {% else %} disabled {% endif %} style="cursor: pointer">
-    {% if train %}
-        {% if premium %}
-            {% if has_slot %}
-                {% trans 'в очередь' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
+
+    <div style="display: flex; justify-content: center; margin-bottom: 20rem;">
+
+      <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('knowledge')" style="cursor: pointer" {% else %} disabled style="opacity: 0" {% endif %}>
+        {% if train %}
+            {% if premium %}
+                {% if has_slot %}
+                    {% trans 'в очередь' context "skills" %}
+                {% endif %}
             {% endif %}
+
         {% else %}
-            {% if train.skill == 'power' %}
-                {% trans 'изучается...' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
-            {% endif %}
+            {% trans 'изучить' context "skills" %}
+
         {% endif %}
-    {% else %}
-    {% trans 'изучить' context "skills" %}
-    {% endif %}
-  </button>
+      </button>
+
+      {% if train and train.skill == 'knowledge' %}
+      <button class="overview__love-stat-learn" onclick="boost_skill('knowledge')" style="cursor: pointer;">
+        <svg fill="var(--c60)" width="20rem" height="20rem" viewBox="0 0 32 32" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" style="margin-top: 2rem;">
+          <defs id="defs1"></defs>
+          <title id="title1">pill</title>
+          <g id="g2" transform="translate(0.07984301,0.76198896)">
+            <g id="g3" transform="matrix(0.66666667,0,0,0.66666667,-2.4399199,-1.0402662)"><circle style="fill:var(--c10one);stroke-width:0.0656107;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="path3" cx="24.044485" cy="23.993231" r="15.928144"></circle><path d="m 24,40.0001 c -2.841,-0.003 -5.6303,-0.7608 -8.0823,-2.1958 -2.452,-1.435 -4.4786,-3.4957 -5.8726,-5.9712 L 38.574,17.3851 c 0.9453,2.0768 1.4317,4.3331 1.426,6.615 -0.0048,4.242 -1.692,8.3089 -4.6915,11.3084 C 32.3089,38.3081 28.242,39.9953 24,40.0001 Z M 8.71302,28.7391 C 8.23879,27.2042 7.99841,25.6066 8.00001,24.0001 8.00504,19.7582 9.69241,15.6914 12.6919,12.6919 15.6914,9.69243 19.7581,8.00511 24,8.00008 c 2.5338,-0.0079 5.0325,0.59259 7.286,1.751 2.1768,1.11972 4.0705,2.71972 5.538,4.67902 l -12.4149,6.35 -15.69413,7.958 z" fill="#333333" id="path1-5" style="fill:var(--c10one);stroke:var(--c60);stroke-opacity:1"></path></g>
+            <rect style="opacity:1;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect1" width="1.5253338" height="8.6951571" x="26.551046" y="17.135778" rx="0.89540023" ry="1.0104811"></rect>
+            <rect style="opacity:1;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect2" width="1.5253338" height="8.6951571" x="20.72069" y="-31.661291" rx="0.89540023" ry="1.0104811" transform="rotate(90)"></rect>
+          </g>
+        </svg>
+      </button>
+      {% endif %}
+
+    </div>
 </div>
 <!--выносливость-->
 <div class="overview__love-stat-content">
@@ -143,25 +173,48 @@
         {% endif %}
     </p>
   </div>
-  <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('endurance')" {% else %} disabled {% endif %} style="cursor: pointer">
-    {% if train %}
-        {% if premium %}
-            {% if has_slot %}
-                {% trans 'в очередь' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
+
+    <div style="display: flex; justify-content: center; margin-bottom: 20rem;">
+
+      <button class="overview__love-stat-learn eduBlock4" {% if not train or premium and has_slot  %} onclick="up_skill('endurance')" style="cursor: pointer" {% else %} disabled style="opacity: 0" {% endif %}>
+        {% if train %}
+            {% if premium %}
+                {% if has_slot %}
+                    {% trans 'в очередь' context "skills" %}
+                {% endif %}
             {% endif %}
+
         {% else %}
-            {% if train.skill == 'power' %}
-                {% trans 'изучается...' context "skills" %}
-            {% else %}
-                {% trans 'недоступно' context "skills" %}
-            {% endif %}
+            {% trans 'изучить' context "skills" %}
+
         {% endif %}
-    {% else %}
-    {% trans 'изучить' context "skills" %}
-    {% endif %}
-  </button>
+      </button>
+
+      {% if train and train.skill == 'endurance' %}
+      <button class="overview__love-stat-learn" onclick="boost_skill('endurance')" style="cursor: pointer;">
+        <svg width="20rem" height="20rem" viewBox="0 0 72 72" id="emoji" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" style="
+            margin-top: 2rem;
+        ">
+          <defs id="defs6"></defs>
+          <g id="color">
+            <path fill="var(--c10one)" stroke="none" d="m 45.468477,44.904988 c -16.47,16.47 -16.145873,15.723096 -25.105873,15.643096 -0.18,-0.16 -5.244348,-3.504276 -5.414348,-3.674376 -2.35,-2.35 -3.058256,-5.803808 -3.058256,-8.903808 0,-3.1 1.18,-6.2 3.53,-8.55 l 11.81,-11.81 z" id="path2" style="fill-opacity:1"></path>
+            <path fill="var(--c10one)" stroke="none" d="m 56.967936,14.628255 c -2.47,-2.47 -5.75,-3.83 -9.2599,-3.83 -3.51,0 -6.8,1.36 -9.26,3.83 l -12.5201,12.51 18.52,18.52 12.51,-12.52 c 2.47,-2.46 3.83,-5.75 3.83,-9.26 0,-3.5 -1.36,-6.79 -3.82,-9.25 z" id="path3" style="fill-opacity:1"></path>
+            <path fill="#92D3F5" stroke="none" d="M57.55,14.39c-2.65-2.66-6.19-4.1201-9.96-4.1201c-3.78,0-7.32,1.46-9.97,4.1201L24.4,27.61l1.41,1.42 l17.1,17.1l1.42,1.41l13.22-13.22c2.66-2.66,4.12-6.2,4.12-9.97S60.21,17.04,57.55,14.39z M44.33,44.71l-3.52-3.52L27.23,27.61 L39.04,15.8c2.35-2.35,5.45-3.53,8.55-3.53c0.25,0,0.49,0.01,0.74,0.02c2.85,0.18,5.65,1.35,7.81,3.51 c2.35,2.35,3.53,5.45,3.53,8.55c0,3.1-1.18,6.2-3.53,8.55L44.33,44.71z" id="path4" style="fill:#c3c3c3;fill-opacity:1"></path>
+            <line x1="27.2279" x2="26.6579" y1="27.6135" y2="27.0335" fill="none" stroke="none" id="line5"></line>
+          </g>
+          <g id="line">
+            <path fill="#000000" stroke="none" d="M47.5877,12.2742c3.1001,0,6.2001,1.1759,8.5519,3.5276l0,0c4.7035,4.7035,4.7035,12.4002,0,17.1038 L32.52,56.5251c-2.3518,2.3518-5.4518,3.5277-8.5519,3.5277c-3.1001,0-6.2001-1.1759-8.5519-3.5277l0,0 c-4.7035-4.7035-4.7035-12.4002,0-17.1038l23.6195-23.6195C41.3875,13.45,44.4876,12.2742,47.5877,12.2742 M47.5877,10.2742 c-3.7741,0-7.3135,1.4608-9.9661,4.1134L14.002,38.0071c-5.4953,5.4953-5.4953,14.4369,0,19.9322 c2.6526,2.6526,6.192,4.1135,9.9661,4.1135c3.7741,0,7.3135-1.4608,9.9661-4.1134l23.6196-23.6195 c5.4953-5.4953,5.4953-14.4369,0-19.9322C54.9012,11.735,51.3618,10.2742,47.5877,10.2742L47.5877,10.2742z" id="path6"></path>
+            <line x1="28.5625" x2="41.4219" y1="30.4062" y2="43.2656" fill="none" stroke="var(--c60)" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2" id="line6"></line>
+          </g>
+          <g id="g2" transform="matrix(2.25,0,0,2.25,0.17964678,1.7144752)">
+            <rect style="opacity:1;fill:#000000;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect1" width="1.5253338" height="8.6951571" x="26.551046" y="17.135778" rx="0.89540023" ry="1.0104811"></rect>
+            <rect style="opacity:1;fill:#000000;fill-opacity:1;stroke-width:0.0317067;stroke-linejoin:bevel;stroke-opacity:0.990654;paint-order:markers fill stroke" id="rect2" width="1.5253338" height="8.6951571" x="20.72069" y="-31.661291" rx="0.89540023" ry="1.0104811" transform="rotate(90)"></rect>
+          </g>
+        </svg>
+      </button>
+      {% endif %}
+
+    </div>
 </div>
 
 <!--кнопка древа навыков-->
