--- a/party/templates/primaries/primaries.html
+++ b/party/templates/primaries/primaries.html
@@ -42,7 +42,7 @@
                     <div class="row" style="border: 1px solid white;">
                         <div class="col-xs-2 col-sm-2 col-md-2">
                             <!--если пользователь загрузил аватарку-->
-                            <a href='profile/{{ member.pk }}' target="_blank">
+                            <a href='profile/{{ candidate.pk }}' target="_blank">
                                 {% if candidate.image %}
                                 <img src="{{ candidate.image.url }}" width="50" height="50" align="right">
                                 {% else %}
